Thu Aug 30 14:15:44 2001  George Lebl <jirka@5z.com>

	* gnome-gconf.h:  Eeek, we were including gconf-client, we don't
	  want to do that.

Wed Aug 29 01:24:33 2001  George Lebl <jirka@5z.com>

	* gnome-program.[ch]: ifdef out the help functions, that's a better
	  indication that these are here just for show for now.  A proposal
	  of sorts.

Tue Aug 28 23:40:23 2001  George Lebl <jirka@5z.com>

	* gnome-program.c: app prefix defaults to NULL, which will cause
	  a g_warning (maybe should be g_error) when locate_file is used
	  for an app relative domain.  Also don't search the path for
	  app relative files.

	* gnome-program.[ch]:  Add a proposal of functions implementation
	  for displaying app and system help.  This is not part of the
	  API people should use.  It's just for people to leer at for
	  now.

Tue Aug 28 22:45:44 2001  George Lebl <jirka@5z.com>

	* gnome-program.[ch]: To make help file (and other files) location
	  possible add distinction for app and gnome specific files.  Also
	  add a macro that will set the standard directory properties more
	  simply.

	* gnome-init.c: translate module names

Tue Aug 28 01:49:27 2001  George Lebl <jirka@5z.com>

	* gnome-gconf.[ch]: For program relative path, take an optional
	  argument of GnomeProgram.  Also add documentation for these
	  two.

Mon Aug 27 00:55:56 2001  George Lebl <jirka@5z.com>

	* gnome-config.c, parse-path.cP: use an internal version of
	  cancat dir and file which always works with '/'

Mon Aug 27 00:32:57 2001  George Lebl <jirka@5z.com>

	* gnome-gconf.c: include gnome-i18nP.h

	* gnome-init.[ch], gnome-program.[ch]: Fix include stuff foo, 
	  declare the externs in the header file, initialize triggers again,
	  and put back the sound stuff so that we're at 1.0 level on that.
	  Also added a few descriptions of GnomeProgram properties.

Sun Aug 26 22:54:57 2001  George Lebl <jirka@5z.com>

	* libgnome.h, Makefile.am, gnome-gconf.c: Getting confused a bit,