@@ -1,3 +1,8 @@
+Thu Aug 30 19:04:25 2001  George Lebl <jirka@5z.com>
+
+	* gnome-util.c: if looking for a shell in the fallback code,
+	  look for shells in /usr/bin as well as that's used on solaris
+
 Thu Aug 30 14:15:44 2001  George Lebl <jirka@5z.com>
 
 	* gnome-gconf.h:  Eeek, we were including gconf-client, we don't
